# foot

./: CHANGELOG.md  INSTALL.md  README.md  box-drawing.c  client.c  commands.c  commands.h  config.c  config.h  csi.c  debug.h  extract.c  extract.h  fdm.c  foot-features.h  foot-server@.service.in  foot-server@.socket  foot.info  foot.ini  footrc  fractional-scale-v1.xml  grid.c  grid.h  input.c  key-binding.h  main.c  meson.build  meson_options.txt  notify.c  org.codeberg.dnkl.foot.metainfo.xml  osc.c  reaper.c  render.c  render.h  search.c  selection.c  selection.h  server.c  shm.c  sixel.c  (+11 more)
doc/: foot-ctlseqs.7.scd  foot.1.scd  foot.ini.5.scd  footclient.1.scd  footrc.5.scd  meson.build
pgo/: pgo.c
scripts/: generate-unicode-precompose.sh
terminfo/: meson.build
themes/: Deus  aeroroot  ayu-mirage  chiba-dark  deus  kitty  nord  onedark  palenight  poimandres  tokyonight_storm
